plakietka dla marih

--- a/room.css
+++ b/room.css
@@ -61,3 +61,20 @@
 #app-menu .iphone-badge {
     display: none; /*ukrycie zbugowanych/brzydkich przycisków*/
 }
+
+/*Marihuana*/
+.id-28209493>.badge-box>i.bdg,
+#chat-messages .fromID-28209493 .bdg {
+    background-image: url("http://i144.photobucket.com/albums/r173/manuelito_05/th_marihuana.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-28209493 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("http://i144.photobucket.com/albums/r173/manuelito_05/th_marihuana.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
