--- a/room.css
+++ b/room.css
@@ -78,3 +78,20 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/*nevermore*/
+.id-8920721>.badge-box>i.bdg,
+#chat-messages .fromID-8920721 .bdg {
+    background-image: url("https://vgy.me/sWDRev.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-8920721 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://vgy.me/sWDRev.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
