--- a/room.css
+++ b/room.css
@@ -95,3 +95,54 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/*Kreskahe*/
+.id-16354252>.badge-box>i.bdg,
+#chat-messages .fromID-16354252 .bdg {
+    background-image: url("https://i.imgur.com/UdruUTk.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-16354252 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/UdruUTk.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/*M.O.N.O*/
+.id-30882262>.badge-box>i.bdg,
+#chat-messages .fromID-30882262 .bdg {
+    background-image: url("https://i.imgur.com/0pifDO2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-30882262 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/0pifDO2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/*LolPlayGames*/
+.id-30987783>.badge-box>i.bdg,
+#chat-messages .fromID-30987783 .bdg {
+    background-image: url("https://i.imgur.com/3WJVtqp.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-30987783 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/3WJVtqp.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
