--- a/room.css
+++ b/room.css
@@ -116,7 +116,7 @@
 /*M.O.N.O*/
 .id-30882262>.badge-box>i.bdg,
 #chat-messages .fromID-30882262 .bdg {
-    background-image: url("https://i.imgur.com/0pifDO2.png");
+    background-image: url("http://pa1.narvii.com/6517/b84f19721342c3c5c66b81cb2b9cb28151bb8f6e_hq.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -124,7 +124,7 @@
 
 #user-rollover.id-30882262 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/0pifDO2.png");
+    background-image: url("http://pa1.narvii.com/6517/b84f19721342c3c5c66b81cb2b9cb28151bb8f6e_hq.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -176,6 +176,40 @@
 #user-rollover.id-28366137 .badge-box>i.bdg {
     border-radius: 6px;
     background-image: url("https://i.imgur.com/LMjHqc9.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/*-linea*/
+.id-30989262>.badge-box>i.bdg,
+#chat-messages .fromID-30989262 .bdg {
+    background-image: url("https://i.imgur.com/FOag3Yc.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-30989262 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/FOag3Yc.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/*DeerAono*/
+.id-31050836>.badge-box>i.bdg,
+#chat-messages .fromID-31050836 .bdg {
+    background-image: url("https://i.imgur.com/pc4cjMC.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-31050836 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/pc4cjMC.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
