--- a/room.css
+++ b/room.css
@@ -99,7 +99,7 @@
 /*Kreskahe*/
 .id-16354252>.badge-box>i.bdg,
 #chat-messages .fromID-16354252 .bdg {
-    background-image: url("https://i.imgur.com/UdruUTk.png");
+    background-image: url("https://i.imgur.com/ekU0ths.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -107,7 +107,7 @@
 
 #user-rollover.id-16354252 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/UdruUTk.png");
+    background-image: url("https://i.imgur.com/ekU0ths.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
