--- a/room.css
+++ b/room.css
@@ -214,3 +214,20 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/*Stydiaa*/
+.id-30563279>.badge-box>i.bdg,
+#chat-messages .fromID-30563279 .bdg {
+    background-image: url("https://i.imgur.com/g1c1fpf.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-30563279 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/g1c1fpf.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
