--- a/room.css
+++ b/room.css
@@ -248,3 +248,20 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/*Kuroaksan*/
+.id-31015015>.badge-box>i.bdg,
+#chat-messages .fromID-31015015 .bdg {
+    background-image: url("https://i.imgur.com/5gXLvC1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-31015015 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/5gXLvC1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
