--- a/room.css
+++ b/room.css
@@ -265,3 +265,20 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/*XothX*/
+.id-31300959>.badge-box>i.bdg,
+#chat-messages .fromID-31300959 .bdg {
+    background-image: url("https://i.imgur.com/sLaFAzD.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-31300959 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/sLaFAzD.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
