--- a/room.css
+++ b/room.css
@@ -167,7 +167,7 @@
 /*Mystic*/
 .id-28366137>.badge-box>i.bdg,
 #chat-messages .fromID-28366137 .bdg {
-    background-image: url("https://i.imgur.com/LMjHqc9.jpg");
+    background-image: url("https://i.imgur.com/niZThij.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -175,7 +175,7 @@
 
 #user-rollover.id-28366137 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/LMjHqc9.jpg");
+    background-image: url("https://i.imgur.com/niZThij.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
