--- a/room.css
+++ b/room.css
@@ -184,7 +184,7 @@
 /*-linea*/
 .id-30989262>.badge-box>i.bdg,
 #chat-messages .fromID-30989262 .bdg {
-    background-image: url("https://i.imgur.com/kWJvifo.jpg");
+    background-image: url("https://i.imgur.com/NzrWdMg.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -192,7 +192,7 @@
 
 #user-rollover.id-30989262 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/kWJvifo.jpg");
+    background-image: url("https://i.imgur.com/NzrWdMg.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
