--- a/room.css
+++ b/room.css
@@ -150,7 +150,7 @@
 /*Grina*/
 .id-10607990>.badge-box>i.bdg,
 #chat-messages .fromID-10607990 .bdg {
-    background-image: url("https://i.imgur.com/G9VBte4.gif");
+    background-image: url("https://i.imgur.com/0AcqUqB.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -158,7 +158,7 @@
 
 #user-rollover.id-10607990 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/G9VBte4.gif");
+    background-image: url("https://i.imgur.com/0AcqUqB.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
