--- a/room.css
+++ b/room.css
@@ -218,7 +218,7 @@
 /*Stydiaa*/
 .id-30563279>.badge-box>i.bdg,
 #chat-messages .fromID-30563279 .bdg {
-    background-image: url("https://i.imgur.com/g1c1fpf.gif");
+    background-image: url("https://i.imgur.com/sNksZjh.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -226,7 +226,7 @@
 
 #user-rollover.id-30563279 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/g1c1fpf.gif");
+    background-image: url("https://i.imgur.com/sNksZjh.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
