--- a/room.css
+++ b/room.css
@@ -285,3 +285,20 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/*YuzuYuzura*/
+.id-34264340>.badge-box>i.bdg,
+#chat-messages .fromID-34264340 .bdg {
+    background-image: url("https://i.pinimg.com/originals/7f/16/ea/7f16ea37eb9b1e50ac3fb92786778dfc.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-34264340 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.pinimg.com/originals/7f/16/ea/7f16ea37eb9b1e50ac3fb92786778dfc.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
