--- a/ROOM.css
+++ b/ROOM.css
@@ -272,7 +272,7 @@
 /*XothX*/
 .id-31300959>.badge-box>i.bdg,
 #chat-messages .fromID-31300959 .bdg {
-    background-image: url("https://i.imgur.com/sLaFAzD.png");
+    background-image: url("https://i.imgur.com/xwqeB8e.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -280,7 +280,7 @@
 
 #user-rollover.id-31300959 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/sLaFAzD.png");
+    background-image: url("https://i.imgur.com/xwqeB8e.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
