--- a/ROOM.css
+++ b/ROOM.css
@@ -170,7 +170,7 @@
 /*Mystic*/
 .id-28366137>.badge-box>i.bdg,
 #chat-messages .fromID-28366137 .bdg {
-    background-image: url("https://i.imgur.com/niZThij.jpg");
+    background-image: url("https://i.imgur.com/pjnBQ9v.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -178,7 +178,7 @@
 
 #user-rollover.id-28366137 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/niZThij.jpg");
+    background-image: url("https://i.imgur.com/pjnBQ9v.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
