--- a/ROOM.css
+++ b/ROOM.css
@@ -159,7 +159,7 @@
 /*JustMonika*/
 .id-32804894>.badge-box>i.bdg,
 #chat-messages .fromID-32804894 .bdg {
-    background-image: url("https://i.imgur.com/wsclnal.png");
+    background-image: url("https://i.imgur.com/Z5A4WFI.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -167,7 +167,7 @@
 
 #user-rollover.id-32804894 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://i.imgur.com/wsclnal.png");
+    background-image: url("https://i.imgur.com/Z5A4WFI.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
