--- a/ROOM.css
+++ b/ROOM.css
@@ -68,7 +68,7 @@
 }
 
 .icon {
-    background-image: url('https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/icons.png');
+    background-image: url('https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/icons.png');
 }
 
 /*Grina*/
