xD miki nie usuwaj każdego [*]

--- a/ROOM.css
+++ b/ROOM.css
@@ -172,3 +172,34 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+/*XothX*/	
+.id-31300959>.badge-box>i.bdg,	
+#chat-messages .fromID-31300959 .bdg {	
+    background-image: url("https://i.imgur.com/xwqeB8e.gif");	
+    background-size: cover;	
+    background-repeat: no-repeat;	
+    background-position: center center;	
+}	
+	
+#user-rollover.id-31300959 .badge-box>i.bdg {	
+    border-radius: 6px;	
+    background-image: url("https://i.imgur.com/xwqeB8e.gif");	
+    background-size: cover;	
+    background-repeat: no-repeat;	
+    background-position: center center;	
+}
+/*Marihuana*/
+.id-28209493>.badge-box>i.bdg,
+#chat-messages .fromID-28209493 .bdg {	
+    background-image: url("http://i144.photobucket.com/albums/r173/manuelito_05/th_marihuana.gif");	
+    background-size: cover;	
+    background-repeat: no-repeat;	
+    background-position: center center;	
+}	
+#user-rollover.id-28209493 .badge-box>i.bdg {	
+    border-radius: 6px;	
+    background-image: url("http://i144.photobucket.com/albums/r173/manuelito_05/th_marihuana.gif");	
+    background-size: cover;	
+    background-repeat: no-repeat;	
+    background-position: center center;	
+}
