--- a/ROOM.css
+++ b/ROOM.css
@@ -71,7 +71,7 @@
     background-image: url('https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/icons.png');
 }
 
-/*Grina*/
+/*- gяєєиα -*/
 .id-10607990>.badge-box>i.bdg,
 #chat-messages .fromID-10607990 .bdg {
     background-image: url("https://i.imgur.com/0AcqUqB.gif");
@@ -87,6 +87,22 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+/*- gяєєиα - | Mobile*/
+.id-30563279>.badge-box>i.bdg,
+#chat-messages .fromID-30563279 .bdg {
+    background-image: url("https://i.imgur.com/sNksZjh.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#user-rollover.id-30563279 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://i.imgur.com/sNksZjh.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+  
 
 /*Mystic*/
 .id-28366137>.badge-box>i.bdg,
