--- a/ROOM.css
+++ b/ROOM.css
@@ -179,7 +179,7 @@
     background-image: url("https://i.imgur.com/Z5A4WFI.gif");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: top;
 }
 
 #user-rollover.id-32804894 .badge-box>i.bdg {
@@ -187,7 +187,7 @@
     background-image: url("https://i.imgur.com/Z5A4WFI.gif");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: top;
 }
 /*XothX*/	
 .id-31300959>.badge-box>i.bdg,	
