--- a/ROOM.css
+++ b/ROOM.css
@@ -223,14 +223,14 @@
 /*Sexy Alien*/
 .id-142388363>.badge-box>i.bdg,
 #chat-messages .fromID-142388363 .bdg {	
-    background-image: url("https://media.giphy.com/media/l3977adOpN1GbQNUs/giphy.gif");	
+    background-image: url("https://i.giphy.com/media/l3977adOpN1GbQNUs/giphy.webp");	
     background-size: cover;	
     background-repeat: no-repeat;	
     background-position: center center;	
 }	
 #user-rollover.id-14238836 .badge-box>i.bdg {	
     border-radius: 6px;	
-    background-image: url("https://media.giphy.com/media/l3977adOpN1GbQNUs/giphy.gif");	
+    background-image: url("https://i.giphy.com/media/l3977adOpN1GbQNUs/giphy.webp");	
     background-size: cover;	
     background-repeat: no-repeat;	
     background-position: center center;	
