--- a/ROOM.css
+++ b/ROOM.css
@@ -1,19 +1,10 @@
-#onesignal-bell-container {
-    display: none;
-}
-
 /* Góra */
-.app-header,
-#app-menu,
-#plugcubed,
-#history-button,
-#rs-skip-button {
+.app-header, #app-menu, #plugcubed, #history-button, #rs-skip-button {
     background: rgba(0, 0, 0, 0.50);
 }
 .header-panel-button.selected {
     background-color: rgba(34, 34, 34, 0.5);
 }
-
 /* Dół */
 #footer {
     background: rgba(0, 0, 0, 0.50);
@@ -21,7 +12,6 @@
 #playlist-button {
     background: linear-gradient(to bottom,rgba(172, 118, 255, 0.7) 0,rgba(146, 90, 255, 0.7) 100%);
 }
-
 /* Przycisk od kolejki */
 #dj-button {
     background: rgba(0, 0, 0, 0.75);
@@ -36,9 +26,7 @@
     background: rgba(255, 0, 0, 0.35);
 }
 /* Woot, Grab, Meh */
-#grab .top span,
-#woot .top span,
-#meh .top span {
+#grab .top span, #woot .top span, #meh .top span {
     display: none !important;
 }
 #woot .top:after {
@@ -58,257 +46,194 @@
     position: relative;
     display: inline-block;
     top: -6px;
-}   
-
+}
 /* Poprawki i usprawnienia */
-.social-menu .signup,
-#app-menu .android-badge,
-#app-menu .iphone-badge {
-    display: none; /*ukrycie zbugowanych/brzydkich przycisków*/
+.social-menu .signup, #app-menu .android-badge, #app-menu .iphone-badge {
+    display: none;
+   /*ukrycie zbugowanych/brzydkich przycisków*/
 }
-
 .icon {
-    background-image: url('https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/icons.png');
+    background-image: url('https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/icons.png');
 }
-
 /*- gяєєиα -*/
-.id-10607990>.badge-box>i.bdg,
-#chat-messages .fromID-10607990 .bdg {
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina.gif");
+.id-10607990>.badge-box>i.bdg, #chat-messages .fromID-10607990 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 #user-rollover.id-10607990 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina.gif");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 /*- gяєєиα - | Mobile*/
-.id-30563279>.badge-box>i.bdg,
-#chat-messages .fromID-30563279 .bdg {
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina_mobile.png");
+.id-30563279>.badge-box>i.bdg, #chat-messages .fromID-30563279 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina_mobile.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 #user-rollover.id-30563279 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina_mobile.png");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/grina_mobile.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 /*Mystic*/
-.id-28366137>.badge-box>i.bdg,
-#chat-messages .fromID-28366137 .bdg {
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mystic.png");
+.id-28366137>.badge-box>i.bdg, #chat-messages .fromID-28366137 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mystic.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 #user-rollover.id-28366137 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mystic.png");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mystic.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 /*Amoniak*/
-.id-10542387>.badge-box>i.bdg,
-#chat-messages .fromID-10542387 .bdg {
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/amoniak.gif");
+.id-10542387>.badge-box>i.bdg, #chat-messages .fromID-10542387 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/amoniak.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 #user-rollover.id-10542387 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/amoniak.gif");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/amoniak.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 /*Pandorianim*/
-.id-31730421>.badge-box>i.bdg,
-#chat-messages .fromID-31730421 .bdg {
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/pandorianim.gif");
+.id-31730421>.badge-box>i.bdg, #chat-messages .fromID-31730421 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/pandorianim.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 #user-rollover.id-31730421 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/pandorianim.gif");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/pandorianim.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 /*ZielonyLis*/
-.id-5933599>.badge-box>i.bdg,
-#chat-messages .fromID-5933599 .bdg {
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony_lis.png");
+.id-5933599>.badge-box>i.bdg, #chat-messages .fromID-5933599 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony_lis.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 #user-rollover.id-5933599 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony_lis.png");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony_lis.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 /*JustMonika*/
 /* nie no tego raka nie dodam */
-/*XothX*/	
-.id-31300959>.badge-box>i.bdg,	
-#chat-messages .fromID-31300959 .bdg {	
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/xoth.gif");	
-    background-size: cover;	
-    background-repeat: no-repeat;	
-    background-position: center center;	
-}	
-	
-#user-rollover.id-31300959 .badge-box>i.bdg {	
-    border-radius: 6px;	
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/xoth.gif");	
-    background-size: cover;	
-    background-repeat: no-repeat;	
-    background-position: center center;	
+/*XothX*/
+.id-31300959>.badge-box>i.bdg, #chat-messages .fromID-31300959 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/xoth.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+#user-rollover.id-31300959 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/xoth.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 /*Marihuana*/
-.id-28209493>.badge-box>i.bdg,
-#chat-messages .fromID-28209493 .bdg {	
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/marihuana.gif");	
-    background-size: cover;	
-    background-repeat: no-repeat;	
-    background-position: center center;	
-}	
-#user-rollover.id-28209493 .badge-box>i.bdg {	
-    border-radius: 6px;	
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/marihuana.gif");	
-    background-size: cover;	
-    background-repeat: no-repeat;	
-    background-position: center center;	
+.id-28209493>.badge-box>i.bdg, #chat-messages .fromID-28209493 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/marihuana.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+#user-rollover.id-28209493 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/marihuana.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 /*Sexy Alien*/
-.id-14238836>.badge-box>i.bdg,
-#chat-messages .fromID-14238836 .bdg {	
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/sexy_alien.gif");	
-    background-size: cover;	
-    background-repeat: no-repeat;	
-    background-position: center center;	
-}	
-#user-rollover.id-14238836 .badge-box>i.bdg {	
-    border-radius: 6px;	
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/sexy_alien.gif");	
-    background-size: cover;	
-    background-repeat: no-repeat;	
-    background-position: center center;	
+.id-14238836>.badge-box>i.bdg, #chat-messages .fromID-14238836 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/sexy_alien.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+#user-rollover.id-14238836 .badge-box>i.bdg {
+    border-radius: 6px;
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/sexy_alien.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 /*Hundjäger*/
-.id-14592706>.badge-box>i.bdg,
-#chat-messages .fromID-14592706 .bdg {
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/hundjager.gif");
+.id-14592706>.badge-box>i.bdg, #chat-messages .fromID-14592706 .bdg {
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/hundjager.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 #user-rollover.id-14592706 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/hundjager.gif");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/hundjager.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
-
 /* Mikєy */
-[data-cid^="6425281-"] .msg .from .icon-chat-subscriber,
-#user-lists .list.room .id-6425281 .icon-chat-subscriber,
-#user-rollover.id-6425281 .meta.subscriber .status i {
-    background: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/mike_sub.png") !important;
+[data-cid^="6425281-"] .msg .from .icon-chat-subscriber, #user-lists .list.room .id-6425281 .icon-chat-subscriber, #user-rollover.id-6425281 .meta.subscriber .status i {
+    background: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/mike_sub.png") !important;
     background-repeat: no-repeat !important;
 }
-
 #user-rollover.id-6425281 .meta.subscriber .status span {
     color: #e74c3c !important;
 }
-
 #user-rollover.id-6425281 .subscriber .thumb {
     border-color: #e74c3c !important;
 }
-
 /* - gяєєиα -*/
-[data-cid^="10607990-"] .msg .from .icon-chat-subscriber,
-#user-lists .list.room .id-10607990 .icon-chat-subscriber,
-#user-rollover.id-10607990 .meta.subscriber .status i {
-    background: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/grina_sub.png") !important;
+[data-cid^="10607990-"] .msg .from .icon-chat-subscriber, #user-lists .list.room .id-10607990 .icon-chat-subscriber, #user-rollover.id-10607990 .meta.subscriber .status i {
+    background: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/grina_sub.png") !important;
     background-repeat: no-repeat !important;
 }
-
-[data-cid^="10607990-"] .msg .from .icon-chat-manager,
-#user-lists .list.room .id-10607990 .icon-chat-manager,
-#user-rollover.id-10607990 .info .role i.icon-chat-manager {
-    background: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/grina_manager.png") !important;
+[data-cid^="10607990-"] .msg .from .icon-chat-manager, #user-lists .list.room .id-10607990 .icon-chat-manager, #user-rollover.id-10607990 .info .role i.icon-chat-manager {
+    background: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/grina_manager.png") !important;
     background-repeat: no-repeat !important;
 }
-
-[data-cid^="10607990-"] .msg .from .icon-chat-promoter,
-#user-lists .list.room .id-10607990 .icon-chat-promoter,
-#user-rollover.id-10607990 .info .role i.icon-chat-promoter {
-    background: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/grina_promotor.png") !important;
+[data-cid^="10607990-"] .msg .from .icon-chat-promoter, #user-lists .list.room .id-10607990 .icon-chat-promoter, #user-rollover.id-10607990 .info .role i.icon-chat-promoter {
+    background: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/grina_promotor.png") !important;
     background-repeat: no-repeat !important;
 }
-
-[data-cid^="10607990-"] .msg .from .icon-chat-promoter + span,
-#user-lists .list.room .id-10607990 .icon-chat-promoter + span,
-#user-rollover.id-10607990 .info .role i.icon-chat-promoter + span,
-[data-cid^="10607990-"] .msg .from .icon-chat-manager + span,
-#user-lists .list.room .id-10607990 .icon-chat-manager + span,
-#user-rollover.id-10607990 .info .role i.icon-chat-manager + span {
+[data-cid^="10607990-"] .msg .from .icon-chat-promoter + span, #user-lists .list.room .id-10607990 .icon-chat-promoter + span, #user-rollover.id-10607990 .info .role i.icon-chat-promoter + span, [data-cid^="10607990-"] .msg .from .icon-chat-manager + span, #user-lists .list.room .id-10607990 .icon-chat-manager + span, #user-rollover.id-10607990 .info .role i.icon-chat-manager + span {
     color: #7DFF7C !important;
 }
-
-#chat [data-cid^="10607990-"] span.un.clickable,
+#chat [data-cid^="10607990-"] span.un.clickable, 
 /*.id-10607990 span.un.clickable,*/
-#user-lists .list.room .id-10607990 .name,
-#user-lists .list.room .is-staff.id-10607990 .name,
-#user-lists .list.room .is-dj.id-10607990 .name,
-#user-lists .list.room .is-subscriber.id-10607990 .name,
-#user-lists .list.room [class*='role'].id-10607990 .name,
-#chat .msg .text .id-10607990,
-#chat .msg .text .name.id-10607990,
-#chat .msg .text .name.id-10607990 .name,
-#user-rollover.id-10607990 .username,
-#user-rollover.id-10607990 .meta.subscriber .status span,
-#user-rollover.id-10607990.is-staff .info .role span {
+#user-lists .list.room .id-10607990 .name, #user-lists .list.room .is-staff.id-10607990 .name, #user-lists .list.room .is-dj.id-10607990 .name, #user-lists .list.room .is-subscriber.id-10607990 .name, #user-lists .list.room [class*='role'].id-10607990 .name, #chat .msg .text .id-10607990, #chat .msg .text .name.id-10607990, #chat .msg .text .name.id-10607990 .name, #user-rollover.id-10607990 .username, #user-rollover.id-10607990 .meta.subscriber .status span, #user-rollover.id-10607990.is-staff .info .role span {
     color: #7DFF7C !important;
 }
-
-#user-rollover.id-10607990 .subscriber .thumb,
-#user-rollover.id-10607990.is-staff .thumb {
+#user-rollover.id-10607990 .subscriber .thumb, #user-rollover.id-10607990.is-staff .thumb {
     border-color: #7DFF7C !important;
 }
-
-.fromID-10607990 .from .un.clickable:before,
-.id-10607990 > .msg > .from:before { 
-    content: url("https://rawgit.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/heart.png") !important;
+.fromID-10607990 .from .un.clickable:before, .id-10607990 > .msg > .from:before {
+    content: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/heart.png") !important;
     float: left;
     margin: 0px 3px 0px 3px;
 }
