--- a/ROOM.css
+++ b/ROOM.css
@@ -85,14 +85,14 @@
 }
 /*Mystic*/
 .id-28366137>.badge-box>i.bdg, #chat-messages .fromID-28366137 .bdg {
-    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mystic.png");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mysticc.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
 #user-rollover.id-28366137 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mystic.png");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/mysticc.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -127,14 +127,14 @@
 }
 /*ZielonyLis*/
 .id-5933599>.badge-box>i.bdg, #chat-messages .fromID-5933599 .bdg {
-    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony_lis.png");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 }
 #user-rollover.id-5933599 .badge-box>i.bdg {
     border-radius: 6px;
-    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony_lis.png");
+    background-image: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/badges/zielony.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
